<resources>
    <string name="app_name">MeatGrocery</string>
    <string name="search_item">Search</string>
    <string name="content_text">The List of Fresh Meats available in Our MeatGrocery Shop are listed below</string>
    <string name="listname">Chicken</string>
    <string name="chicken_list">Chicken List</string>
    <string name="category">Chicken Categories</string>
    <string name="quantity">Quantity : </string>
    <string name="price">Price : </string>
    <string name="offer_tag">Get 10% OFF for first three Order - Happy Customer</string>
    <string name="add_to_cart">Add to Cart</string>
    <string name="mutton_list">Mutton List</string>
    <string name="category_mutton">Mutton Category</string>
    <string name="category_beef">Beef Category</string>
    <string name="added_list">My CartItem List</string>
    <string name="date">Date &amp; Time </string>
    <string name="order">Order</string>
    <string name="delete_all">Delete All</string>
    <string name="name">Name</string>
    <string name="editTitle">Edit Values Here</string>
    <string name="quantityEdit">Quantity</string>
    <string name="priceEdit">In Rupees</string>
    <string name="save">Save</string>
</resources>