<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="5dp"
        android:layout_margin="5dp">

        <Button
            android:id="@+id/cancelBtn"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:background="@drawable/ic_baseline_cancel"
            android:layout_gravity="end"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_margin="5dp">

            <TextView
                android:id="@+id/editTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/editTitle"
                android:textStyle="bold"
                android:textColor="#000"
                android:layout_gravity="center"
                android:textSize="18sp"/>

            <TextView
                android:id="@+id/editBreedName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/name"
                android:textStyle="bold"
                android:textColor="#000"
                android:layout_margin="2dp"/>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="₹"
                    android:textSize="24sp"
                    android:layout_marginRight="5dp"
                    android:textColor="#23AE28"
                    android:textStyle="bold"/>
                <EditText
                    android:id="@+id/editPrice"
                    android:layout_width="100dp"
                    android:layout_height="20dp"
                    android:hint="@string/priceEdit"
                    android:layout_margin="2dp"
                    android:textColor="#000"
                    android:background="@android:color/transparent"
                    android:inputType="number"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginRight="20dp">

                <EditText
                    android:id="@+id/editQuantity"
                    android:layout_width="100dp"
                    android:layout_height="20dp"
                    android:hint="@string/quantityEdit"
                    android:layout_margin="2dp"
                    android:textColor="#23AE28"
                    android:inputType="number"
                    android:background="@android:color/transparent"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Kg / Nos"
                    android:textSize="12sp"
                    android:textColor="#000"/>
            </LinearLayout>

            <Button
                android:id="@+id/saveBtnEdit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/save"
                android:textAllCaps="false"
                android:layout_gravity="center"
                android:background="@drawable/rounded_button"
                android:textSize="12sp"/>
        </LinearLayout>
    </androidx.cardview.widget.CardView>
</RelativeLayout>