<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#d77651"
    tools:context=".Activities.CartItemActivity">

    <RelativeLayout
        android:id="@+id/cartRelativeLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#ebece8"
        android:padding="15dp">

        <ImageView
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:src="@drawable/ic_baseline_arrow_back"
            android:id="@+id/cartActivityBack"
            android:layout_centerVertical="true"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/added_list"
            android:layout_toRightOf="@+id/cartActivityBack"
            android:layout_centerVertical="true"
            android:layout_marginLeft="10dp"
            android:textSize="18dp"
            android:textColor="#d77651"/>
        <Button
            android:id="@+id/delete_all"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:text="@string/delete_all"
            android:textAllCaps="false"
            android:textSize="10dp"
            android:textColor="#000"
            android:drawableLeft="@drawable/ic_baseline_delete_sweep"
            android:background="#EF0B0B"
            android:padding="2dp"/>
    </RelativeLayout>
    <androidx.recyclerview.widget.RecyclerView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/cartRelativeLayout"
        android:id="@+id/cart_Recyclerview">

    </androidx.recyclerview.widget.RecyclerView>
    <Button
        android:id="@+id/orderBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/order"
        android:textAllCaps="false"
        android:background="#D5C010"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_margin="20dp"/>

</RelativeLayout>