<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:background="#d77651"
    android:focusable="true"
    android:focusableInTouchMode="true">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:id="@+id/mainRelativeLayout"
        android:background="#ebece8"
        android:padding="10dp">

        <ImageView
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:src="@drawable/ic_baseline_post_add"
            android:id="@+id/app_Icon"/>
        <TextView
            android:id="@+id/app_TitleText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/app_name"
            android:textColor="#D77651"
            android:textSize="18dp"
            android:layout_marginLeft="5dp"
            android:layout_centerVertical="true"
            android:layout_toRightOf="@+id/app_Icon"/>
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_baseline_shopping_cart"
            android:layout_alignParentRight="true"
            android:layout_centerInParent="true"/>
    </RelativeLayout>
    <EditText
        android:id="@+id/search_EditText"
        android:layout_margin="15dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/search_item"
        android:layout_below="@+id/mainRelativeLayout"
        android:padding="10dp"
        android:background="@drawable/edit_text_style"/>
    <TextView
        android:id="@+id/longText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/search_EditText"
        android:text="@string/content_text"
        android:padding="10dp"
        android:textStyle="bold"
        android:fontFamily="sans-serif-medium"/>
    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/main_RecyclerView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/longText"
        android:padding="10dp"
        android:layout_margin="10dp"/>

</RelativeLayout>