<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    app:cardCornerRadius="4dp"
    android:padding="5dp"
    android:layout_margin="5dp">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="5dp">
        <LinearLayout
            android:id="@+id/cardItemLinearLayout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <TextView
                android:id="@+id/addedItemName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Name"
                android:textColor="#000"
                android:textStyle="bold"
                android:layout_margin="3dp"/>
                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/price"
                    android:textColor="@android:color/black"
                    android:layout_marginRight="3dp"
                    android:layout_marginLeft="3dp"/>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="₹"
                        android:textStyle="bold"
                        android:textSize="16dp"
                        android:textColor="#118E16"
                        android:layout_marginRight="3dp"/>
                    <TextView
                        android:id="@+id/addedItemRate"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="00"
                        android:textColor="#118E16"
                        android:layout_marginRight="3dp"/>
                </LinearLayout>
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/quantity"
                    android:textColor="@android:color/black"
                    android:layout_marginRight="3dp"
                    android:layout_marginLeft="3dp"/>
                <TextView
                    android:id="@+id/cartItemRate"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="1"
                    android:textStyle="bold"
                    android:textColor="#CD0606"
                    android:layout_marginRight="5dp"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="KG/Nos"
                    android:textColor="@android:color/black"
                    android:layout_marginRight="3dp"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="3dp">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/date"
                    android:textColor="@android:color/black"
                    android:layout_marginRight="3dp"
                    android:layout_marginLeft="3dp"/>
                <TextView
                    android:id="@+id/cartItemDate"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="27-06-1995"
                    android:textColor="#090808"
                    android:layout_marginRight="3dp"/>
            </LinearLayout>
        </LinearLayout>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toEndOf="@+id/cardItemLinearLayout"
            android:layout_centerVertical="true"
            android:gravity="right"
            android:orientation="horizontal"
            android:padding="5dp"
            android:layout_alignParentRight="true">
            <ImageView
                android:id="@+id/editCartItem"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_baseline_edit"
                android:layout_margin="10dp"/>
            <ImageView
                android:id="@+id/deleteCartItem"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_baseline_delete_forever"
                android:layout_margin="10dp"/>
        </LinearLayout>
    </RelativeLayout>
</androidx.cardview.widget.CardView>